--- a/WebApp/Pages/Index.cshtml
+++ b/WebApp/Pages/Index.cshtml
@@ -14,30 +14,30 @@
                 lobortis lorem non, accumsan metus.
             </h3>
         </div>
-        <div class="col bg-secondary" style="height: 100%; padding-left: 0px; padding-right: 0px">
+        <div class="col bg-secondary" style="height: 100%; padding-left: 0px; padding-right: 30px">
             <!-- Content for the second square -->
-            <img class="" style="height: 100%; width: inherit; overflow: hidden;" alt="My image" src="images/pilt.jpg"/>
+            <img class="" style="height: 100%; width: calc(100% + 30px); overflow: hidden;" alt="My image" src="images/pilt.jpg"/>
 
         </div>
     </div>
     <div class="row" style="height: calc(50% - 16px)">
-        <div class="col bg-white me-3 d-flex flex-column">
+        <div class="col bg-white me-3 d-flex flex-column justify-content-between">
             <!-- Content for the third square -->
             <div class="row">
-                <h3 class="bg-primary text-white p-4 text-center fw-light">Tulevased üritused</h3>
-                <div class="mt-2">
-                    @foreach (var eventInfo in Model.FutureEvents)
+                <h3 class="bg-primary text-white p-3 text-center fw-light">Tulevased üritused</h3>
+                <div class="mt-2 px-4">
+                    @for (var i=0; i < 4; i++)
                     {
                         <div class="row mb-2">
                             <div class="col-sm-6">
-                                @eventInfo.EventName
+                                @(i+1). @Model.FutureEvents[i].EventName
                             </div>
                             <div class="col-sm-3 ">
-                                @eventInfo.EventDateTime.Value.ToShortDateString()
+                                @Model.FutureEvents[i].EventDateTime.Value.ToShortDateString()
                             </div>
                             <div class="col-sm-3">
-                                <a href="/EventInfos/Details?id=@eventInfo.Id" class="me-2 text-black-50 text-decoration-none">OSAVÕTJAD</a>
-                                <a href="/EventInfos/Delete?id=@eventInfo.Id" class="text-black-50 text-decoration-none">
+                                <a href="/EventInfos/Details?id=@Model.FutureEvents[i].Id" class="me-2 text-black-50 text-decoration-none">OSAVÕTJAD</a>
+                                <a href="/EventInfos/Delete?id=@Model.FutureEvents[i].Id" class="text-black-50 text-decoration-none">
                                     <img width="24" alt="icon img" src="images/remove.svg"/>
                                 </a>
 
@@ -46,8 +46,9 @@
                     }
                 </div>
             </div>
-            <div class="d-flex p-2 pb-3">
-                <a href="/EventInfos/Create" class="fw-bold btn btn-link me-4 text-black-50 text-decoration-none">LISA ÜRITUS</a>
+            <div class="d-flex justify-content-between pb-3">
+                <a href="/EventInfos/Create" class="fw-bold btn btn-link text-black-50 text-decoration-none">LISA ÜRITUS</a>
+                <a href="/EventInfos/Index" class="fw-bold btn btn-link text-black-50 text-decoration-none">VAATA KÕIKI ÜRITUSI</a>
 
             </div>
         </div>
@@ -55,32 +56,26 @@
         <div class="col bg-white ms-3 ">
             <!-- Content for the third square -->
             <div class="row">
-                <h3 class="bg-primary fw-light text-white p-4 text-center">Toimunud üritused</h3>
-                <div class="">
-                    <dd class="col-sm-12">
-                        <br/>
-                        <div class="participators">
-                            @foreach (var eventInfo in Model.PastEvents)
-                            {
-                                <div class="row participator mb-2">
-                                    <div class="col">
-                                        <div class="row">
-                                            <div class="col-sm-6 participator-name">
-                                                @eventInfo.EventName
-                                            </div>
-                                            <div class="col-sm-3  participator-code">
-                                                @eventInfo.EventDateTime.Value.ToShortDateString()
-                                            </div>
-                                            <div class="col-sm-3  participator-code">
-                                                <a href="/EventInfos/Details?id=@eventInfo.Id" class="me-2 text-black-50 text-decoration-none">OSAVÕTJAD</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
+                <h3 class="bg-primary fw-light text-white p-3 text-center">Toimunud üritused</h3>
+
+                <div class="mt-2 px-4">
+                    @foreach (var eventInfo in Model.PastEvents)
+                    {
+                        <div class="row participator mb-2">
+
+                            <div class="col-sm-6">
+                                @eventInfo.EventName
+                            </div>
+                            <div class="col-sm-3">
+                                @eventInfo.EventDateTime.Value.ToShortDateString()
+                            </div>
+                            <div class="col-sm-3">
+                                <a href="/EventInfos/Details?id=@eventInfo.Id" class="me-2 text-black-50 text-decoration-none">OSAVÕTJAD</a>
+                            </div>
                         </div>
-                    </dd>
+                    }
                 </div>
+
             </div>
         </div>
     </div>
