--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
 <footer class="border-top footer text-muted bg-dark">
     <div class="container pt-5 pb-5 text-light">
-        <div class="row px-5">
+        <div class="row">
             <div class="col-sm-3">
                 <h2 class="mb-3">Curabitur</h2>
 
